# RapidOcrEmbed

./: .gitignore  CMakeLists.txt  DEP_BUILD.md  LICENSE  NOTICE  OcrCRTLinkage.cmake  README.md  RapidOcrEmbed上传.py  build.py
LICENSES/: Apache-2.0.txt  LGPLv3.txt  PaddlePaddle.txt
RapidOcrEmbed/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  build.py  rebuild_static.py  使用说明.md
RapidOcrEmbed/img2table-cpp/include/table/: clustering.h  extractor.h  html_gen.h  types.h
RapidOcrEmbed/img2table-cpp/src/table/: cells.cpp  clustering.cpp  html_gen.cpp  lines.cpp  metrics.cpp  threshold.cpp
RapidOcrEmbed/include/: AngleNet.h  CrnnNet.h  OcrLite.h  OcrLiteCApi.h  OcrStruct.h  OcrUtils.h  TableNet.h
RapidOcrEmbed/src/: CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCApi.cpp  TableNet.cpp  TbpuLayout.cpp
RapidOcrEmbed/模型转二进制/: embed_models.py  run_ocr.py
RapidOcrEmbed/测试/: table_img2table.html  table_img2table_cf.html  table_slanet.html  table_slanet_cf.html
img2table-cpp/: CMakeLists.txt  build_pyd.bat  build_test.bat  img2table-精简的py源码.rar
img2table-cpp/include/table/: cells.h  creation.h  lines.h  metrics.h  normalization.h  threshold.h
img2table-cpp/src/table/: creation.cpp  extractor.cpp  html_gen.cpp  normalization.cpp
img2table-cpp/test/: main.cpp
include/: DbNet.h  ModelLoader.h  OcrLite.h  OcrLiteCApi.h  TbpuLayout.h
ocr-qt-cpp/: CliRunner.cpp  CliRunner.h  HtmlToXlsx.h  Icons.h  LICENSE  MainWindow.cpp  MainWindow.cpp.bak  MainWindow.h  NOTICE  OCRWrapper.cpp  OCRWrapper.cpp.bak  OCRWrapper.h  OcrConfig.h  OcrHttpServer.cpp  OcrHttpServer.h  OcrJson.cpp  OcrJson.h  OcrQtCpp.pro  PdfHelper.cpp  PdfHelper.h  PdfTextLayer.cpp  PdfTextLayer.h  README.md  ScreenshotDialog.cpp  ScreenshotDialog.h  TbpuLayout.cpp  TbpuLayout.h  TextClickCli.cpp  TextClickCli.h  TextClickEngine.cpp  TextClickEngine.h  WidgetPicker.cpp  WidgetPicker.h  app.rc  build_msvc.py  gen_libs_pri.py  libs.pri  main.cpp  ocrqtcpp_plugin_import.cpp  webui.h
ocr-qt-cpp/test/: comprehensive_test.py  剪贴板内容生成调试.rar
ocr-qt-cpp/test/剪贴板内容生成调试/: clipboard_20260625_203351.txt  compare.py  程序生成的html.html  获取当前剪贴板数据.py  读取html生成剪贴板内容.py
ocr-qt-cpp/test/文件和图片/: 二页_ocr.txt  点击测试文本.txt
src/: AngleNet.cpp  ModelLoader.cpp  OcrLite.cpp  OcrLiteCApi.cpp  OcrUtils.cpp  TableNet.cpp  TbpuLayout.cpp
模型转二进制/models/: PP-LCNet_x1_0_textline_ori_infer_int8w.mnn  ch_ppocr_mobile_v2.0_cls_train.mnn  ch_ppocr_mobile_v2.0_cls_train_int8w.mnn  slanet_keys.txt
模型转二进制/models/PP-OCRv6_medium_det_onnx/: PP-OCRv6_medium_det_onnx.required_operators.config
模型转二进制/models/PP-OCRv6_medium_rec_onnx/: PP-OCRv6_medium_rec_onnx.required_operators.config  PP-OCRv6_medium_rec_onnx.yml
模型转二进制/models/PP-OCRv6_small_det_onnx/: PP-OCRv6_small_det_onnx.required_operators.config  PP-OCRv6_small_det_onnx_int8w.mnn
模型转二进制/models/PP-OCRv6_small_rec_onnx/: PP-OCRv6_small_rec_onnx.required_operators.config  PP-OCRv6_small_rec_onnx.yml
模型转二进制/models/PP-OCRv6_tiny_det_onnx/: PP-OCRv6_tiny_det_onnx.mnn
模型转二进制/models/PP-OCRv6_tiny_rec_onnx/: PP-OCRv6_tiny_rec_onnx.yml
模型转二进制/models/SLANet_plus_onnx/: SLANet_plus.required_operators.config
测试/: table_img2table.html  table_img2table_cf.html  table_slanet.html  table_slanet_cf.html  test_dll_full.py  纯表格输出.py  纯表格输出_dll.py
